--- a/Sample_Usage.ipynb
+++ b/Sample_Usage.ipynb
@@ -2,24 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "7a9241de",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%reload_ext autoreload\n",
-    "%autoreload 2\n",
-    "\n",
     "import pandas as pd\n",
-    "import copy\n",
-    "import numpy as np\n",
-    "import scipy as sp\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
-    "from utils.data_loader import *\n",
-    "from utils.common_helpers import *\n",
-    "from utils.generic_pipeline import *\n",
-    "from utils.generic_analyzer import *"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "\n",
+    "from utils.data_loader import ACSEmploymentDataset\n",
+    "from utils.generic_pipeline import GenericPipeline\n",
+    "from utils.generic_analyzer import GenericAnalyzer"
    ]
   },
   {
@@ -378,13 +390,15 @@
    "source": [
     "base_model = DecisionTreeClassifier(criterion='entropy', max_depth=10, max_features=0.6, random_state=SEED)\n",
     "encoder = ColumnTransformer(transformers=[\n",
-    "                    ('categorical_features', OneHotEncoder(categories=[list(set(base_pipeline.X_train[col])) for col in base_pipeline.categorical_columns], sparse=False), base_pipeline.categorical_columns),\n",
-    "                    ('numerical_features', StandardScaler(), base_pipeline.numerical_columns)])\n",
+    "    ('categorical_features', OneHotEncoder(categories=[list(set(base_pipeline.X_train[col])) for col in base_pipeline.categorical_columns], sparse=False),\n",
+    "     base_pipeline.categorical_columns),\n",
+    "    ('numerical_features', StandardScaler(), base_pipeline.numerical_columns)\n",
+    "])\n",
     "\n",
     "model = Pipeline([\n",
-    "                                ('features', encoder),\n",
-    "                                ('learner', base_model)\n",
-    "                            ])"
+    "    ('features', encoder),\n",
+    "    ('learner', base_model)\n",
+    "])"
    ]
   },
   {
