--- a/notebooks/Models_Tuning.ipynb
+++ b/notebooks/Models_Tuning.ipynb
@@ -6,7 +6,9 @@
     "collapsed": false
    },
    "source": [
-    "# Models Tuning"
+    "# Models Tuning\n",
+    "\n",
+    "This notebook was run in VScode to view GridSearchCV progress ([ref](https://www.kaggle.com/questions-and-answers/319408))."
    ]
   },
   {
