Added average metrics creation

--- a/notebooks/hypothesis_space/Plot_Final_Hypothesis_Space_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Final_Hypothesis_Space_Results.ipynb
@@ -2,17 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "execution_count": 1,
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -27,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import os\n",
@@ -43,19 +34,122 @@
    }
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## Import dependencies"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "import os.path\n",
+    "import pandas as pd\n",
     "\n",
-    "from source.utils.stability_utils import display_result_plots"
+    "from configs import config"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Create average metrics files"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [],
+   "source": [
+    "STATE = config.DATASET_CONFIG['state']\n",
+    "YEAR = config.DATASET_CONFIG['year']\n",
+    "DATASET_NAME = f\"Folktables_{STATE}_{YEAR}\"\n",
+    "\n",
+    "MODELS_NAMES = [model_config['model_name'] for model_config in config.MODELS_CONFIG]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [],
+   "source": [
+    "def create_final_metrics_df(dataset_name, model_names,\n",
+    "                            results_path=os.path.join('..', '..', 'results', 'hypothesis_space', 'final_metrics')):\n",
+    "    results_filenames = [filename for filename in os.listdir(results_path)]\n",
+    "    for model_name in model_names:\n",
+    "        model_results_filenames = [filename for filename in results_filenames if dataset_name in filename and model_name in filename]\n",
+    "\n",
+    "        model_results_dfs = [pd.read_csv(f'{results_path}/{model_results_filename}') for model_results_filename in model_results_filenames]\n",
+    "        model_average_results_df = None\n",
+    "        for model_results_df in model_results_dfs:\n",
+    "            if model_average_results_df is None:\n",
+    "                model_average_results_df = model_results_df\n",
+    "            else:\n",
+    "                model_average_results_df += model_results_df\n",
+    "\n",
+    "        model_average_results_df = model_average_results_df / len(model_results_dfs)\n",
+    "        filename = f'Average_Metrics_{dataset_name}_{model_name}.csv'\n",
+    "        model_average_results_df.to_csv(f'{results_path}/{filename}', index=False)\n",
+    "        print(f'File with average metrics for {model_name} is created')\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File with average metrics for LogisticRegression is created\n",
+      "File with average metrics for DecisionTreeClassifier is created\n",
+      "File with average metrics for RandomForestClassifier is created\n",
+      "File with average metrics for XGBClassifier is created\n",
+      "File with average metrics for KNeighborsClassifier is created\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_final_metrics_df(DATASET_NAME, MODELS_NAMES)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## Visualize average metrics"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
