Added MLPclassifier to the list of models for experiments

--- a/Sample_Usage.ipynb
+++ b/Sample_Usage.ipynb
@@ -743,6 +743,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Bias metrics -- below CM\n",
+    "# Variance metrics -- our stability metrics\n",
     "Analyzer = GenericAnalyzer(base_pipeline.X_test, base_pipeline.y_test, ['SEX','RAC1P'], [SEX_priv, RACE_priv])\n",
     "dtc_res = Analyzer.compute_metrics(y_preds, 'Decision_Tree')"
    ]
@@ -910,6 +912,13 @@
    "source": [
     "pd.DataFrame(dtc_res)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   }
   }
  ],
  "metadata": {
