Added grouped variance metrics

--- a/Sample_Usage.ipynb
+++ b/Sample_Usage.ipynb
@@ -29,9 +29,9 @@
     "from sklearn.preprocessing import OneHotEncoder, StandardScaler\n",
     "from sklearn.pipeline import Pipeline\n",
     "\n",
-    "from utils.data_loader import ACSEmploymentDataset\n",
-    "from utils.generic_pipeline import GenericPipeline\n",
-    "from utils.generic_analyzer import GenericAnalyzer"
+    "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
+    "from utils.custom_classes.generic_pipeline import GenericPipeline\n",
+    "from utils.analyzers.bias_analyzer import BiasAnalyzer"
    ]
   },
   {
@@ -743,9 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Bias metrics -- below CM\n",
-    "# Variance metrics -- our stability metrics\n",
-    "Analyzer = GenericAnalyzer(base_pipeline.X_test, base_pipeline.y_test, ['SEX','RAC1P'], [SEX_priv, RACE_priv])\n",
+    "Analyzer = BiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test, ['SEX','RAC1P'], [SEX_priv, RACE_priv])\n",
     "dtc_res = Analyzer.compute_metrics(y_preds, 'Decision_Tree')"
    ]
   },
