--- a/notebooks/Models_Tuning.ipynb
+++ b/notebooks/Models_Tuning.ipynb
@@ -94,7 +94,7 @@
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from utils.data_loader import ACSEmploymentDataset\n",
+    "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
     "from utils.model_tuning_utils import *\n",
     "from configs.config import *\n",
     "\n",
