--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
@@ -83,8 +83,7 @@
     "EXPERIMENT_NAME = 'Hypothesis_Space'\n",
     "\n",
     "SEX_priv = RACE_priv = str(1)\n",
-    "# N_ESTIMATORS = 200\n",
-    "N_ESTIMATORS = 10\n",
+    "N_ESTIMATORS = 200\n",
     "PROTECTED_GROUPS = ['SEX','RAC1P']\n",
     "PRIV_VALUES = [SEX_priv, RACE_priv]\n",
     "TUNED_PARAMS_FILE_PATH = os.path.join('..', '..', 'results', 'models_tuning', 'tuning_results_Folktables_GA_2018_20221215__105658.csv')"
@@ -133,7 +132,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Preprocess dataset"
+    "## Load dataset"
    ],
    "metadata": {
     "collapsed": false
@@ -189,18 +188,20 @@
     "                      dataset_name, base_model_name, exp_num=1):\n",
     "    base_pipeline = create_base_pipeline(dataset, protected_groups, priv_values, model_seed)\n",
     "\n",
+    "    # Compute variance metrics for subgroups\n",
+    "    save_results = False\n",
     "    stability_fairness_analyzer = StabilityFairnessAnalyzer(ModelSetting.BATCH, n_estimators, base_model, base_model_name,\n",
     "                                                            base_pipeline.X_train_val, base_pipeline.y_train_val,\n",
     "                                                            base_pipeline.X_test, base_pipeline.y_test,\n",
     "                                                            base_pipeline.protected_groups, base_pipeline.priv_values, base_pipeline.test_groups,\n",
     "                                                            base_pipeline.target, dataset_name)\n",
     "\n",
-    "    save_results = False\n",
     "    y_preds, variance_metrics_df = stability_fairness_analyzer.compute_metrics(save_results=save_results,\n",
     "                                                                               result_filename=None,\n",
     "                                                                               save_dir_path=None,\n",
     "                                                                               make_plots=False)\n",
     "\n",
+    "    # Compute bias metrics for subgroups\n",
     "    bias_analyzer = BiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test,\n",
     "                                 base_pipeline.protected_groups, base_pipeline.priv_values,\n",
     "                                 base_pipeline.test_groups)\n",
@@ -210,6 +211,7 @@
     "                                                      save_dir_path=None)\n",
     "    bias_metrics_df = pd.DataFrame(dtc_res)\n",
     "\n",
+    "    # Save metrics\n",
     "    metrics_df = pd.concat([variance_metrics_df, bias_metrics_df])\n",
     "    result_filename = f'{EXPERIMENT_NAME}_Metrics_{dataset_name}_Experiment_{exp_num}_{base_model_name}'\n",
     "    save_dir_path = os.path.join('..', '..', 'results', 'hypothesis_space')\n",
@@ -229,7 +231,13 @@
    "execution_count": 8,
    "outputs": [],
    "source": [
-    "def run_experiment(exp_num, model_seed):\n",
+    "def run_experiment(exp_num: int, model_seed: int):\n",
+    "    \"\"\"\n",
+    "    Find variance and bias metrics for each model in config.MODELS_CONFIG.\n",
+    "    Save results in results/config.MODELS_CONFIG folder.\n",
+    "\n",
+    "    :param exp_num: the number of experiment; is used to name the result file with metrics\n",
+    "    \"\"\"\n",
     "    for model_idx in tqdm(range(len(config.MODELS_CONFIG))):\n",
     "        print('#' * 30, f' [Experiment {exp_num}] Analyze {config.MODELS_CONFIG[model_idx][\"model_name\"]} ', '#' * 30)\n",
     "        model_seed += 1\n",
