Tuned based on COMPAS

--- a/notebooks/models_tuning/Models_Tuning_Folktables.ipynb
+++ b/notebooks/models_tuning/Models_Tuning_Folktables.ipynb
@@ -73,21 +73,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "%cd .."
+   "execution_count": 3,
+   "id": "b7564726",
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/denys_herasymuk/UCU/4course_2term/Bachelor_Thesis/Code/fairness-variance\n"
+     ]
+    }
    ],
+   "source": [
+    "%cd ../.."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "import matplotlib\n",
@@ -99,17 +113,17 @@
     "\n",
     "plt.style.use('mpl20')\n",
     "matplotlib.rcParams['figure.dpi'] = 100"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -117,55 +131,49 @@
     "except:\n",
     "    !pip install folktables\n",
     "    from folktables import ACSDataSource, ACSEmployment"
-   ],
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   },
    "outputs": [],
    "source": [
     "STATE = DATASET_CONFIG['state']\n",
     "YEAR = DATASET_CONFIG['year']\n",
     "DATASET_NAME = f\"Folktables_{STATE}_{YEAR}\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Loading ACSEmployment data"
-   ],
+   "id": "e34f792f",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
-   }
+   },
+   "source": [
+    "## Loading ACSEmployment data"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "dataset = ACSEmploymentDataset(state=[STATE], year=YEAR, root_dir='data', with_nulls=False)"
-   ],
+   "execution_count": 7,
+   "id": "d7067c19",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%%\n"
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "dataset = ACSEmploymentDataset(state=[STATE], year=YEAR, root_dir='data', with_nulls=False)"
+   ]
   },
   {
    "cell_type": "markdown",
