--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
@@ -2,22 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
@@ -1490,8 +1481,8 @@
     "            select_variance_metric_legend.properties(height=200, width=50),\n",
     "            bias_color_legend.properties(height=200, width=50),\n",
     "        ),\n",
-    "        models_bias_metrics_chart.properties(height=200, width=300),\n",
-    "        models_variance_metrics_chart.properties(height=200, width=300),\n",
+    "        models_bias_metrics_chart.properties(height=200, width=300, title=\"Bias Metric Plot\"),\n",
+    "        models_variance_metrics_chart.properties(height=200, width=300, title=\"Variance Metric Plot\"),\n",
     "    )\n",
     ")"
    ],
