--- a/Sample_Usage.ipynb
+++ b/Sample_Usage.ipynb
@@ -31,7 +31,7 @@
     "\n",
     "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
     "from utils.custom_classes.generic_pipeline import GenericPipeline\n",
-    "from utils.analyzers.bias_analyzer import BiasAnalyzer"
+    "from utils.analyzers.subgroups_statistical_bias_analyzer import SubgroupsStatisticalBiasAnalyzer"
    ]
   },
   {
@@ -743,7 +743,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Analyzer = BiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test, ['SEX','RAC1P'], [SEX_priv, RACE_priv])\n",
+    "Analyzer = SubgroupsStatisticalBiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test, ['SEX','RAC1P'], [SEX_priv, RACE_priv])\n",
     "dtc_res = Analyzer.compute_metrics(y_preds, 'Decision_Tree')"
    ]
   },
