--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
@@ -63,11 +63,11 @@
     "\n",
     "from configs import config\n",
     "from configs.constants import ModelSetting\n",
-    "from utils.analyzers.stability_fairness_analyzer import StabilityFairnessAnalyzer\n",
+    "from utils.analyzers.subgroups_variance_analyzer import SubgroupsVarianceAnalyzer\n",
     "from utils.common_helpers import create_tuned_base_model, save_metrics_to_file\n",
     "from utils.custom_classes.data_loader import ACSEmploymentDataset\n",
     "from utils.custom_classes.generic_pipeline import GenericPipeline\n",
-    "from utils.analyzers.bias_analyzer import BiasAnalyzer"
+    "from utils.analyzers.subgroups_statistical_bias_analyzer import SubgroupsStatisticalBiasAnalyzer"
    ]
   },
   {
@@ -193,7 +193,7 @@
     "\n",
     "    # Compute variance metrics for subgroups\n",
     "    save_results = False\n",
-    "    stability_fairness_analyzer = StabilityFairnessAnalyzer(ModelSetting.BATCH, n_estimators, base_model, base_model_name,\n",
+    "    stability_fairness_analyzer = SubgroupsVarianceAnalyzer(ModelSetting.BATCH, n_estimators, base_model, base_model_name,\n",
     "                                                            base_pipeline.X_train_val, base_pipeline.y_train_val,\n",
     "                                                            base_pipeline.X_test, base_pipeline.y_test,\n",
     "                                                            base_pipeline.protected_groups, base_pipeline.priv_values, base_pipeline.test_groups,\n",
@@ -205,9 +205,9 @@
     "                                                                               make_plots=False)\n",
     "\n",
     "    # Compute bias metrics for subgroups\n",
-    "    bias_analyzer = BiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test,\n",
-    "                                 base_pipeline.protected_groups, base_pipeline.priv_values,\n",
-    "                                 base_pipeline.test_groups)\n",
+    "    bias_analyzer = SubgroupsStatisticalBiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test,\n",
+    "                                                     base_pipeline.protected_groups, base_pipeline.priv_values,\n",
+    "                                                     base_pipeline.test_groups)\n",
     "    dtc_res = bias_analyzer.compute_subgroups_metrics(y_preds,\n",
     "                                                      save_results=False,\n",
     "                                                      result_filename=None,\n",
