Renamed protected_groups to sensitive_attributes

--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp.ipynb
@@ -94,7 +94,7 @@
     "\n",
     "SEX_priv = RACE_priv = str(1)\n",
     "N_ESTIMATORS = 200\n",
-    "PROTECTED_GROUPS = ['SEX','RAC1P']\n",
+    "SENSITIVE_ATTRIBUTES = ['SEX','RAC1P']\n",
     "PRIV_VALUES = [SEX_priv, RACE_priv]\n",
     "TUNED_PARAMS_FILE_PATH = os.path.join('..', '..', 'results', 'models_tuning', 'tuning_results_Folktables_GA_2018_20221215__105658.csv')"
    ],
@@ -248,7 +248,7 @@
     "            base_model = create_tuned_base_model(config.MODELS_CONFIG[model_idx]['model'],\n",
     "                                                 config.MODELS_CONFIG[model_idx]['model_name'],\n",
     "                                                 models_tuned_params_df)\n",
-    "            results_df = get_model_metrics(base_model, N_ESTIMATORS, dataset, PROTECTED_GROUPS, PRIV_VALUES,\n",
+    "            results_df = get_model_metrics(base_model, N_ESTIMATORS, dataset, SENSITIVE_ATTRIBUTES, PRIV_VALUES,\n",
     "                                           model_seed=model_seed,\n",
     "                                           dataset_name=DATASET_NAME,\n",
     "                                           base_model_name=config.MODELS_CONFIG[model_idx]['model_name'],\n",
