--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_COMPAS_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_COMPAS_Results.ipynb
@@ -257,10 +257,10 @@
     }
    ],
    "source": [
-    "PROTECTED_GROUPS = ['sex','race', 'sex_race']\n",
+    "SENSITIVE_ATTRIBUTES = ['sex', 'race', 'sex_race']\n",
     "\n",
     "# Example of MetricsComposer usage\n",
-    "metrics_composer = MetricsComposer(PROTECTED_GROUPS, models_average_results_dct['DecisionTreeClassifier'])\n",
+    "metrics_composer = MetricsComposer(SENSITIVE_ATTRIBUTES, models_average_results_dct['DecisionTreeClassifier'])\n",
     "metrics_composer.compose_metrics()"
    ]
   },
@@ -1367,7 +1367,7 @@
    "source": [
     "models_composed_metrics_df = pd.DataFrame()\n",
     "for model_name in models_average_results_dct.keys():\n",
-    "    metrics_composer = MetricsComposer(PROTECTED_GROUPS, models_average_results_dct[model_name])\n",
+    "    metrics_composer = MetricsComposer(SENSITIVE_ATTRIBUTES, models_average_results_dct[model_name])\n",
     "    model_composed_metrics_df = metrics_composer.compose_metrics().reset_index()\n",
     "    model_composed_metrics_df['Model_Name'] = model_name\n",
     "    model_composed_metrics_df = model_composed_metrics_df.rename(columns={\"index\": \"Metric\"})\n",
