--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
@@ -254,9 +254,9 @@
     }
    ],
    "source": [
-    "PROTECTED_GROUPS = ['SEX','RAC1P', 'SEX_RAC1P']\n",
+    "SENSITIVE_ATTRIBUTES = ['SEX', 'RAC1P', 'SEX_RAC1P']\n",
     "\n",
-    "metrics_composer = MetricsComposer(PROTECTED_GROUPS, models_average_results_dct['DecisionTreeClassifier'])\n",
+    "metrics_composer = MetricsComposer(SENSITIVE_ATTRIBUTES, models_average_results_dct['DecisionTreeClassifier'])\n",
     "metrics_composer.compose_metrics()"
    ]
   },
@@ -1335,7 +1335,7 @@
    "source": [
     "models_composed_metrics_df = pd.DataFrame()\n",
     "for model_name in models_average_results_dct.keys():\n",
-    "    metrics_composer = MetricsComposer(PROTECTED_GROUPS, models_average_results_dct[model_name])\n",
+    "    metrics_composer = MetricsComposer(SENSITIVE_ATTRIBUTES, models_average_results_dct[model_name])\n",
     "    model_composed_metrics_df = metrics_composer.compose_metrics().reset_index()\n",
     "    model_composed_metrics_df['Model_Name'] = model_name\n",
     "    model_composed_metrics_df = model_composed_metrics_df.rename(columns={\"index\": \"Metric\"})\n",
