--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas.ipynb
@@ -102,7 +102,7 @@
     "SEX_priv = 1\n",
     "RACE_priv = 'Caucasian'\n",
     "N_ESTIMATORS = 200\n",
-    "PROTECTED_GROUPS = ['sex', 'race']\n",
+    "SENSITIVE_ATTRIBUTES = ['sex', 'race']\n",
     "PRIV_VALUES = [SEX_priv, RACE_priv]\n",
     "TUNED_PARAMS_FILE_PATH = os.path.join('..', '..', 'results', 'models_tuning', 'tuning_results_COMPAS_20230115__142510.csv')"
    ],
@@ -278,7 +278,7 @@
     "            base_model = create_tuned_base_model(config.MODELS_CONFIG[model_idx]['model'],\n",
     "                                                 config.MODELS_CONFIG[model_idx]['model_name'],\n",
     "                                                 models_tuned_params_df)\n",
-    "            results_df = get_model_metrics(base_model, N_ESTIMATORS, dataset, PROTECTED_GROUPS, PRIV_VALUES,\n",
+    "            results_df = get_model_metrics(base_model, N_ESTIMATORS, dataset, SENSITIVE_ATTRIBUTES, PRIV_VALUES,\n",
     "                                           model_seed=model_seed,\n",
     "                                           dataset_name=DATASET_NAME,\n",
     "                                           base_model_name=config.MODELS_CONFIG[model_idx]['model_name'],\n",
