Tuned and conducted experiments for COMPAS without sensitive attrs

--- a/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas.ipynb
+++ b/notebooks/hypothesis_space/Hypothesis_Space_Exp_Compas.ipynb
@@ -204,8 +204,8 @@
    "execution_count": 37,
    "outputs": [],
    "source": [
-    "def create_base_pipeline(dataset, protected_groups, priv_values, model_seed):\n",
-    "    base_pipeline = GenericPipeline(dataset, protected_groups, priv_values)\n",
+    "def create_base_pipeline(dataset, sensitive_attributes, priv_values, model_seed):\n",
+    "    base_pipeline = GenericPipeline(dataset, sensitive_attributes, priv_values)\n",
     "    _ = base_pipeline.create_preprocessed_train_test_split(dataset, config.TEST_SET_FRACTION, seed=model_seed)\n",
     "\n",
     "    print('\\nProtected groups splits:')\n",
@@ -215,9 +215,9 @@
     "    return base_pipeline\n",
     "\n",
     "\n",
-    "def get_model_metrics(base_model, n_estimators, dataset, protected_groups, priv_values, model_seed,\n",
+    "def get_model_metrics(base_model, n_estimators, dataset, sensitive_attributes, priv_values, model_seed,\n",
     "                      dataset_name, base_model_name, exp_num=1):\n",
-    "    base_pipeline = create_base_pipeline(dataset, protected_groups, priv_values, model_seed)\n",
+    "    base_pipeline = create_base_pipeline(dataset, sensitive_attributes, priv_values, model_seed)\n",
     "    print('\\n\\nX train and validation set: ')\n",
     "    display(base_pipeline.X_train_val.head(10))\n",
     "\n",
@@ -226,7 +226,7 @@
     "    stability_fairness_analyzer = SubgroupsVarianceAnalyzer(ModelSetting.BATCH, n_estimators, base_model, base_model_name,\n",
     "                                                            base_pipeline.X_train_val, base_pipeline.y_train_val,\n",
     "                                                            base_pipeline.X_test, base_pipeline.y_test,\n",
-    "                                                            base_pipeline.protected_groups, base_pipeline.priv_values, base_pipeline.test_groups,\n",
+    "                                                            base_pipeline.sensitive_attributes, base_pipeline.priv_values, base_pipeline.test_groups,\n",
     "                                                            base_pipeline.target, dataset_name)\n",
     "\n",
     "    y_preds, variance_metrics_df = stability_fairness_analyzer.compute_metrics(save_results=save_results,\n",
@@ -236,7 +236,7 @@
     "\n",
     "    # Compute bias metrics for subgroups\n",
     "    bias_analyzer = SubgroupsStatisticalBiasAnalyzer(base_pipeline.X_test, base_pipeline.y_test,\n",
-    "                                                     base_pipeline.protected_groups, base_pipeline.priv_values,\n",
+    "                                                     base_pipeline.sensitive_attributes, base_pipeline.priv_values,\n",
     "                                                     base_pipeline.test_groups)\n",
     "    dtc_res = bias_analyzer.compute_subgroups_metrics(y_preds,\n",
     "                                                      save_results=False,\n",
