--- a/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
+++ b/notebooks/hypothesis_space/Plot_Average_Hypothesis_Space_Folktables_Results.ipynb
@@ -2839,9 +2839,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "README.md           \u001b[34mdata\u001b[m\u001b[m/               requirements.txt\r\n",
-      "Sample_Usage.ipynb  \u001b[34mdocs\u001b[m\u001b[m/               \u001b[34mresults\u001b[m\u001b[m/\r\n",
-      "\u001b[34mconfigs\u001b[m\u001b[m/            \u001b[34mnotebooks\u001b[m\u001b[m/          \u001b[34mutils\u001b[m\u001b[m/\r\n"
+      "README.md           \u001B[34mdata\u001B[m\u001B[m/               requirements.txt\r\n",
+      "Sample_Usage.ipynb  \u001B[34mdocs\u001B[m\u001B[m/               \u001B[34mresults\u001B[m\u001B[m/\r\n",
+      "\u001B[34mconfigs\u001B[m\u001B[m/            \u001B[34mnotebooks\u001B[m\u001B[m/          \u001B[34mutils\u001B[m\u001B[m/\r\n"
      ]
     }
    ],
